force-app/main/default/objects/LLM_Response_Cache__c/LLM_Response_Cache__c.object-meta.xml
<CustomObject>
    <description>Stores cached LLM responses for category combinations to reduce API costs. Cache persists across bulk processing runs.</description>
    <label>LLM Response Cache</label>
    <nameField>
        <label>Cache Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LLM Response Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>