force-app/main/default/objects/LLM_Response_Cache__c/fields/Alternative_NAICS_Codes__c.field-meta.xml
<CustomField>
    <fullName>Alternative_NAICS_Codes__c</fullName>
    <description>Comma-separated list of alternative NAICS codes suggested by the LLM.</description>
    <label>Alternative NAICS Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>