force-app/main/default/objects/LLM_Response_Cache__c/fields/Category_Hash__c.field-meta.xml
<CustomField>
    <fullName>Category_Hash__c</fullName>
    <description>SHA-256 hash of the category combination (cat1|cat2|cat3). Used as unique identifier for cache lookups.</description>
    <externalId>true</externalId>
    <label>Category Hash</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>