force-app/main/default/objects/LLM_Response_Cache__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>LLM's confidence level for the suggested NAICS code match.</description>
    <label>Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>LOW</fullName>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>