force-app/main/default/objects/LLM_Response_Cache__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Date and time when this cache entry was first created.</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>