force-app/main/default/objects/LLM_Response_Cache__c/fields/Factor_Set_ID__c.field-meta.xml
<CustomField>
    <fullName>Factor_Set_ID__c</fullName>
    <description>Lookup to the PcmtEmssnFctrSet that this cache entry applies to. Cache entries are scoped to specific factor sets.</description>
    <label>Factor Set</label>
    <referenceTo>PcmtEmssnFctrSet</referenceTo>
    <relationshipLabel>LLM Cache Entries</relationshipLabel>
    <relationshipName>LLM_Response_Caches</relationshipName>
    <type>Lookup</type>
</CustomField>