force-app/main/default/objects/LLM_Response_Cache__c/fields/Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_Date__c</fullName>
    <description>Date and time when this cache entry was last accessed and used.</description>
    <label>Last Used Date</label>
    <type>DateTime</type>
</CustomField>