force-app/main/default/objects/LLM_Response_Cache__c/fields/Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Reasoning__c</fullName>
    <description>LLM's reasoning for suggesting this NAICS code for the category combination.</description>
    <label>Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>