force-app/main/default/objects/LLM_Response_Cache__c/fields/Suggested_NAICS__c.field-meta.xml
<CustomField>
    <fullName>Suggested_NAICS__c</fullName>
    <description>The 6-digit NAICS code suggested by the LLM for this category combination.</description>
    <label>Suggested NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>