force-app/main/default/objects/LLM_Response_Cache__c/fields/Use_Count__c.field-meta.xml
<CustomField>
    <fullName>Use_Count__c</fullName>
    <description>Number of times this cache entry has been used to avoid LLM API calls.</description>
    <label>Use Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>